file(GLOB_RECURSE FCL_SOURCE_CODE ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

add_library(${PROJECT_NAME}_static STATIC ${FCL_SOURCE_CODE})
target_link_libraries(${PROJECT_NAME}_static ${CCD_LIBRARIES} ${OCTOMAP_LIBRARIES} ${Boost_LIBRARIES})
set_target_properties(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

add_library(${PROJECT_NAME} SHARED ${FCL_SOURCE_CODE})
target_link_libraries(${PROJECT_NAME} ${CCD_LIBRARIES} ${OCTOMAP_LIBRARIES} ${Boost_LIBRARIES})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME} VERSION ${FCL_MAJOR_VERSION} SOVERSION ${FCL_MINOR_VERSION})
  
install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_static ${PROJECT_NAME} DESTINATION lib)
